--- a/index.html
+++ b/index.html
@@ -12,5 +12,197 @@
 </head>
 <body>
 
+    <header class="header">
+        <div class="header__barra contenedor">
+            <div class="header__logo">
+                <img src="build/img/logo.svg" alt="Logo Real State">
+            </div>
+
+            <nav class="navegacion">
+                <a href="#" class="navegacion__link">Nosotros</a>
+                <a href="#" class="navegacion__link">Propiedades</a>
+                <a href="#" class="navegacion__link">Blog</a>
+                <a href="#" class="navegacion__link">Testimoniales</a>
+            </nav>
+        </div>
+
+        <div class="contenedor">
+            <div class="header__contenido">
+                <h1 class="header__heading">Encuentra tu casa de lujo al mejor Precio</h1>
+                <p class="header__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores nesciunt, quos dolores libero accusamus ex voluptate quidem.</p>
+
+                <img class="header__imagen" src="build/img/imagenHeader.jpg" alt="Imagen del Header">
+            </div>
+        </div>
+    </header>
+
+    <main class="propiedades contenedor">
+        <h2 class="propiedades__heading">Nuestras <span>Propiedades</span></h2>
+
+        <div class="propiedades__grid">
+            <div class="propiedad">
+                <div class="propiedad__imagen">
+                    <h3 class="propiedad__nombre">Casa de Lujo con 3 cuartos</h3>
+                </div>
+                <div class="propiedad__contenido">
+                    <p class="propiedad__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sunt dolore labore facere omnis nesciunt</p>
+                    <p class="propiedad__precio">$ 1,200,000.00</p>
+                    <a href="#" class="propiedad__enlace">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="propiedad">
+                <div class="propiedad__imagen">
+                    <h3 class="propiedad__nombre">Casa de Lujo con 3 cuartos</h3>
+                </div>
+                <div class="propiedad__contenido">
+                    <p class="propiedad__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sunt dolore labore facere omnis nesciunt</p>
+                    <p class="propiedad__precio">$ 1,200,000.00</p>
+                    <a href="#" class="propiedad__enlace">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="propiedad">
+                <div class="propiedad__imagen">
+                    <h3 class="propiedad__nombre">Casa de Lujo con 3 cuartos</h3>
+                </div>
+                <div class="propiedad__contenido">
+                    <p class="propiedad__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sunt dolore labore facere omnis nesciunt</p>
+                    <p class="propiedad__precio">$ 1,200,000.00</p>
+                    <a href="#" class="propiedad__enlace">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="propiedad">
+                <div class="propiedad__imagen">
+                    <h3 class="propiedad__nombre">Casa de Lujo con 3 cuartos</h3>
+                </div>
+                <div class="propiedad__contenido">
+                    <p class="propiedad__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sunt dolore labore facere omnis nesciunt</p>
+                    <p class="propiedad__precio">$ 1,200,000.00</p>
+                    <a href="#" class="propiedad__enlace">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="propiedad">
+                <div class="propiedad__imagen">
+                    <h3 class="propiedad__nombre">Casa de Lujo con 3 cuartos</h3>
+                </div>
+                <div class="propiedad__contenido">
+                    <p class="propiedad__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sunt dolore labore facere omnis nesciunt</p>
+                    <p class="propiedad__precio">$ 1,200,000.00</p>
+                    <a href="#" class="propiedad__enlace">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="propiedad">
+                <div class="propiedad__imagen">
+                    <h3 class="propiedad__nombre">Casa de Lujo con 3 cuartos</h3>
+                </div>
+                <div class="propiedad__contenido">
+                    <p class="propiedad__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sunt dolore labore facere omnis nesciunt</p>
+                    <p class="propiedad__precio">$ 1,200,000.00</p>
+                    <a href="#" class="propiedad__enlace">Ver Propiedad</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <section class="destacada">
+        <div class="contenedor destacada__grid">
+            <div class="destacada__contenido">
+                <h3 class="destacada__heading">Propiedad Destacada</h3>
+                <p class="destacada__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia voluptatem non debitis veritatis rem. Laboriosam, fugit.</p>
+                <p class="destacada__precio">$ 1,200,000.00</p>
+                <a href="#" class="destacada__enlace">Ver Propiedad</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimoniales-blog contenedor">
+        <section class="testimoniales-blog__testimoniales">
+            <h2 class="testimoniales-blog__heading">¿Qué dicen <span>Nuestros Clientes</span></h2>
+
+            <div class="testimonial">
+                <img src="build/img/testimonial.jpg" alt="Imagen de Testimonial" class="testimonial__imagen">
+
+                <div class="testimonial__contenido">
+                    <p class="testimonial__nombre">Familia Hernández</p>
+                    <p class="testimonial__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quas error autem eos gfsr sfbe sdbrvs</p>
+                </div>
+            </div>
+
+        </section>
+        <section class="testimoniales-blog__blog">
+            <h2 class="testimoniales-blog__heading">Últimas entradas <span>De nuestro Blog</span></h2>
+
+            <div class="entrada">
+                <div class="entrada__imagen-contenedor">
+                    <img src="build/img/blog_1.jpg" alt="Imagen blog" class="entrada__imagen">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h3 class="entrada__nombre">Título Aquí</h3>
+                    <p class="entrada__meta">Publicado por Real State el 10 de Agosto 2023 - Comentarios</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum eligendi iure natus id consequatur corporis egreg</p>
+                    <a href="#" class="entrada__enlace">Leer Artículo</a>
+                </div>
+            </div>
+
+            <div class="entrada">
+                <div class="entrada__imagen-contenedor">
+                    <img src="build/img/blog_2.jpg" alt="Imagen blog" class="entrada__imagen">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h3 class="entrada__nombre">Título Aquí</h3>
+                    <p class="entrada__meta">Publicado por Real State el 10 de Agosto 2023 - Comentarios</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum eligendi iure natus id consequatur corporis</p>
+                    <a href="#" class="entrada__enlace">Leer Artículo</a>
+                </div>
+            </div>
+
+            <div class="entrada">
+                <div class="entrada__imagen-contenedor">
+                    <img src="build/img/blog_3.jpg" alt="Imagen blog" class="entrada__imagen">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h3 class="entrada__nombre">Título Aquí</h3>
+                    <p class="entrada__meta">Publicado por Real State el 10 de Agosto 2023 - Comentarios</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum eligendi iure natus id consequatur corporis</p>
+                    <a href="#" class="entrada__enlace">Leer Artículo</a>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <footer class="footer">
+        <div class="footer__grid contenedor">
+            <div class="footer__box">
+                <h3 class="footer__heading">Navegación</h3>
+
+                <nav class="footer__navegacion">
+                    <a href="#" class="footer__link">Nosotros</a>
+                    <a href="#" class="footer__link">Propiedades</a>
+                    <a href="#" class="footer__link">Blog</a>
+                    <a href="#" class="footer__link">Testimoniales</a>
+                </nav>
+            </div>
+
+            <div class="footer__box">
+                <h3 class="footer__heading">Nosotros</h3>
+
+                <p class="footer__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem at est voluptatum consequatur obcaecati explicabo?</p>
+            </div>
+
+            <div class="footer__box">
+                <img src="build/img/logo.svg" alt="imagen logo">
+            </div>
+        </div>
+
+        <p class="copyright">Todos los Derechos Reservados Real State</p>
+    </footer>
+
 </body>
 </html>
